logs/kegbot-api.log
Listing '.'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gflags'...
Listing './lib/python3.5/site-packages/gflags/third_party'...
Listing './lib/python3.5/site-packages/gflags/third_party/pep257'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/kegbot'...
Listing './lib/python3.5/site-packages/kegbot/api'...
Compiling './lib/python3.5/site-packages/kegbot/api/kbapi.py'...
***   File "./lib/python3.5/site-packages/kegbot/api/kbapi.py", line 202
    except ServerError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kegbot/api/protoutil.py'...
***   File "./lib/python3.5/site-packages/kegbot/api/protoutil.py", line 48
    raise ValueError, "Missing required field %s" % name
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kegbot/util'...
Compiling './lib/python3.5/site-packages/kegbot/util/app.py'...
***   File "./lib/python3.5/site-packages/kegbot/util/app.py", line 86
    except gflags.FlagsError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kegbot/util/kbjson.py'...
***   File "./lib/python3.5/site-packages/kegbot/util/kbjson.py", line 39
    raise ImportError, "Unable to load a json library"
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kegbot/util/units.py'...
***   File "./lib/python3.5/site-packages/kegbot/util/units.py", line 115
    raise ConversionError, "Don't know how to convert %s to %s" % (from_unit,
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kegbot/util/util.py'...
***   File "./lib/python3.5/site-packages/kegbot/util/util.py", line 139
    raise AttributeError, 'No attribute named %s' % name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kegbot/util/util_test.py'...
***   File "./lib/python3.5/site-packages/kegbot/util/util_test.py", line 19
    print str(self.enum)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kegbot_api-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/kegbot_pyutils-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/python_gflags-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
